Fix top nav spacing

--- a/components/TopNav.module.scss
+++ b/components/TopNav.module.scss
@@ -151,7 +151,7 @@ nav.topnav {
 }
 
 @media (max-width: 1000px) {
-    nav.topnav {
+    main nav.topnav {
         flex-direction: column;
         height: auto;
         align-items: center;
