--- a/pages/_app.module.scss
+++ b/pages/_app.module.scss
@@ -8,3 +8,9 @@
     display: flex;
     flex-direction: column;
 }
+
+@media screen and (max-width: 1000px) {
+    .mainContent {
+        padding-top: 8em !important;
+    }
+}
